quiz-app: fix some broken styles

--- a/quiz-app/src/theme/_global.scss
+++ b/quiz-app/src/theme/_global.scss
@@ -7,7 +7,7 @@
 body {
   background-color: $bg-color;
   font-family: $primary-font;
-  font-size: 1.1em;
+  font-size: 1em;
   color: $font-color;
 }
 
