--- a/quiz-app/src/theme/components/_list.scss
+++ b/quiz-app/src/theme/components/_list.scss
@@ -6,7 +6,6 @@
     list-style-position: inside;
     padding: 0;
     border: 1px solid $border-color;
-    font-size: 0.9em;
 
     li {
       padding: 0.5em;
